# sqwordle

./: .gitignore  Pipfile  README.md  requirements.txt  setup.cfg
scripts/: run_sqwordle.py  score_words.py
src/sqwordle/: messenger.py  settings.py  wordscore.py
src/sqwordle/utils/: 5_letter_words.txt  driver.py  words.py
