[metadata]
name = sqwordle
description = Beat WORDLE every time
author = Nick Hopewell
license = Public
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    sqwordle
install_requires =
    selenium>=4
    requests>=2
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=3.8

[flake8]
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,